Committed automatically by run.sh

--- a/public/templates/base.html
+++ b/public/templates/base.html
@@ -132,6 +132,11 @@
 	<div id="nav">
 		<div id="leftnav">
 			<a id="main-nav-element" class="nav-element" href="/"><b>Find A Tutor</b></a>
+            <a 
+                id="request-nav-element" 
+                class="nav-element link-nav-element" 
+                href="/request">
+                Find A Tutor</a>
         </div>
         <div id="rightnav">
             {% if email %}
@@ -145,7 +150,6 @@
                 class="nav-element button-nav-element" 
                 href="/logout">
                 Log Out</a>
-            {% else %}
             <a 
                 id="login-nav-element" 
                 class="nav-element link-nav-element" 
