Committed automatically by run.sh

--- a/public/templates/base.html
+++ b/public/templates/base.html
@@ -155,7 +155,7 @@
                 id="login-nav-element" 
                 class="nav-element link-nav-element" 
                 href="/login">
-                Log In</a>
+                Log In {{user}}</a>
             <a 
                 id="register-nav-element" 
                 class="nav-element button-nav-element" 
