Committed automatically by run.sh

--- a/public/templates/base.html
+++ b/public/templates/base.html
@@ -54,7 +54,7 @@
 
 		.button-nav-element:hover {
 			background-color: #17a2b8;
-			color: #FFFFFF;
+			color: #ffffff;
 		}
 		
 		.container {
@@ -113,8 +113,19 @@
 		
 		button:hover, input[type=submit]:hover {
 			background-color: #17a2b8;
-			color: #FFFFFF;
+			color: #ffffff;
 			cursor: pointer;
+		}
+		
+		.list-item {
+		    background-color: #f5f5f2;
+		    border-color: #e2e2e3;
+		    border-radius: 5px;
+		    transition: 0.2s;
+		}
+		
+		.list-item:hover {
+		    background-color: #f5f5f2;
 		}
 		
 		@media only screen and (max-width: 1000px) {
