--- a/public/templates/myaccount.html
+++ b/public/templates/myaccount.html
@@ -12,21 +12,21 @@
             type="text" 
             id="fname" 
             name="fname" 
-            value="{{fname}}" 
+            value="{{user[0]}}" 
             maxlength=120 
             required />
         <input 
             type="text" 
             id="lname" 
             name="lname" 
-            value="{{lname}}" 
+            value="{{user[1]}}" 
             maxlength=120 
             required />
         <input 
             type="email" 
             id="email" 
             name="email" 
-            value="{{email}}" 
+            value="{{user[2]}}" 
             maxlength=120 
             disabled />
         <input 
