Committed automatically by run.sh

--- a/public/templates/base.html
+++ b/public/templates/base.html
@@ -119,9 +119,14 @@
 		
 		.list-item {
 		    background-color: #f5f5f2;
+		    border-width: 1px;
 		    border-color: #e2e2e3;
 		    border-radius: 5px;
 		    transition: 0.2s;
+		    color: #4b4c4f;
+		    text-decoration: none;
+		    font-weight: 700;
+		    font-family: Arial, Helvectica, sans-serif;
 		}
 		
 		.list-item:hover {
