--- a/public/templates/base.html
+++ b/public/templates/base.html
@@ -117,6 +117,12 @@
 			cursor: pointer;
 		}
 		
+		.list {
+		    display: flex;
+		    flex-flow: row wrap;
+		    justify-content: space-around;
+		}
+		
 		.list-item {
 		    background-color: #f5f5f2;
 		    border-width: 1px;
@@ -127,6 +133,7 @@
 		    text-decoration: none;
 		    font-weight: 700;
 		    font-family: Arial, Helvectica, sans-serif;
+		    margin: 20px 40px;
 		}
 		
 		.list-item:hover {
@@ -136,6 +143,9 @@
 		@media only screen and (max-width: 1000px) {
 	        form {
 	            width: 95%;
+	        }
+	        .list {
+	            flex-flow: column wrap;
 	        }
 	    }
 
