--- a/public/templates/base.html
+++ b/public/templates/base.html
@@ -125,19 +125,24 @@
 		
 		.list-item {
 		    background-color: #f5f5f2;
+		    border-style: solid;
 		    border-width: 1px;
 		    border-color: #e2e2e3;
 		    border-radius: 5px;
 		    transition: 0.2s;
 		    color: #4b4c4f;
-		    text-decoration: none;
 		    font-weight: 700;
 		    font-family: Arial, Helvectica, sans-serif;
 		    margin: 20px 40px;
+		    padding: 10px 12px;
 		}
 		
 		.list-item:hover {
 		    background-color: #f5f5f2;
+		}
+		
+		.list-item h2 {
+		    text-decoration: none;
 		}
 		
 		@media only screen and (max-width: 1000px) {
