Committed automatically by run.sh

--- a/public/templates/request.html
+++ b/public/templates/request.html
@@ -10,7 +10,7 @@
         {% for user in users %}
             <a href="/ask/{{user[0]}}">
                 <div class="list-item">
-                    <h2><b>{{user[1]}} {{user[2]}}</b></h2>
+                    <h2 class="list-item-text"><b>{{user[1]}} {{user[2]}}</b></h2>
                 </div>
             </a>
         {% endfor %}
