--- a/public/templates/base.html
+++ b/public/templates/base.html
@@ -121,6 +121,7 @@
 		    display: flex;
 		    flex-flow: row wrap;
 		    justify-content: space-around;
+		    flex: 1 0 17%;
 		}
 		
 		.list-item {
