Committed automatically by run.sh

--- a/public/templates/base.html
+++ b/public/templates/base.html
@@ -121,7 +121,6 @@
 		    display: flex;
 		    flex-flow: row wrap;
 		    justify-content: space-around;
-		    flex: 1 0 17%;
 		}
 		
 		.list-item {
@@ -168,7 +167,7 @@
                 id="request-nav-element" 
                 class="nav-element link-nav-element" 
                 href="/request">
-                Find A Tutor</a>
+                Request Tutoring</a>
         </div>
         <div id="rightnav">
             {% if user %}
@@ -187,7 +186,7 @@
                 id="login-nav-element" 
                 class="nav-element link-nav-element" 
                 href="/login">
-                Log In {{user}}</a>
+                Log In</a>
             <a 
                 id="register-nav-element" 
                 class="nav-element button-nav-element" 
