--- a/public/templates/request.html
+++ b/public/templates/request.html
@@ -7,12 +7,14 @@
 
 {% block content %}
     <div id="list" class="list">
-        {% for user in users %}
+        {% for a_user in users %}
+        {% if not a_user == user %}
             <a href="/ask/{{user[0]}}" class="list-item-link">
                 <div class="list-item">
-                    <h2><b>{{user[1]}} {{user[2]}}</b></h2>
+                    <h2><b>{{a_user[1]}} {{a_user[2]}}</b></h2>
                 </div>
             </a>
+        {% endif %}
         {% endfor %}
     </div>
 {% endblock content %}
