Committed automatically by run.sh

--- a/public/templates/myrequests.html
+++ b/public/templates/myrequests.html
@@ -10,7 +10,7 @@
         <h2>Currently Requesting Tutoring From:</h2>
         {% for a_request in requests %}
             <div class="list-item list-item-white">
-                <h2><b>{{a_request[1]}} {{a_request[2]}}</b></h2>
+                <h2><b>{{a_request}}</b></h2>
             </div>
         {% endfor %}
     </div>
