--- a/public/templates/myaccount.html
+++ b/public/templates/myaccount.html
@@ -12,21 +12,21 @@
             type="text" 
             id="fname" 
             name="fname" 
-            value="{{user[0]}}" 
+            value="{{user[0].fname}}" 
             maxlength=120 
             required />
         <input 
             type="text" 
             id="lname" 
             name="lname" 
-            value="{{user[1]}}" 
+            value="{{user[0].lname}}" 
             maxlength=120 
             required />
         <input 
             type="email" 
             id="email" 
             name="email" 
-            value="{{user[2]}}" 
+            value="{{user[0].email}}" 
             maxlength=120 
             disabled />
         <input 
