Committed automatically by run.sh

--- a/public/templates/myaccount.html
+++ b/public/templates/myaccount.html
@@ -12,7 +12,7 @@
             type="text" 
             id="fname" 
             name="fname" 
-            value="{{user[0].fname}}" 
+            value="{{user[0]}}" 
             maxlength=120 
             required />
         <input 
