Committed automatically by run.sh

--- a/public/templates/myaccount.html
+++ b/public/templates/myaccount.html
@@ -19,14 +19,14 @@
             type="text" 
             id="lname" 
             name="lname" 
-            value="{{user[0].lname}}" 
+            value="{{user[1]}}" 
             maxlength=120 
             required />
         <input 
             type="email" 
             id="email" 
             name="email" 
-            value="{{user[0].email}}" 
+            value="{{user[2]}}" 
             maxlength=120 
             disabled />
         <input 
