--- a/public/templates/base.html
+++ b/public/templates/base.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	<title>{% block title %}{% endblock title %}</title>
+	<script src="https://kit.fontawesome.com/4531fda782.js" crossorigin="anonymous"></script>
 	<style>
 		body {
 			margin: 0px;
