--- a/public/templates/myrequests.html
+++ b/public/templates/myrequests.html
@@ -19,6 +19,8 @@
         {% for a_request in requested %}
             <div class="list-item list-item-white">
                 <h2><b>{{a_request.asker}}</b></h2>
+                <i href="/accept/{{a_request.id_}}" class="far fa-check-circle"></i>
+                <i href="/decline/{{a_request.id_}}" class="far fa-times-circle"></i>
             </div>
         {% endfor %}
     </div>
