Committed automatically by run.sh

--- a/public/templates/base.html
+++ b/public/templates/base.html
@@ -8,6 +8,14 @@
 	<title>{% block title %}{% endblock title %}</title>
 	<script src="https://kit.fontawesome.com/4531fda782.js" crossorigin="anonymous"></script>
 	<style>
+	    .fa-check-circle {
+	        color: green;
+	    }
+	    
+	    .fa-times-circle {
+	        color: green;
+	    }
+	    
 		body {
 			margin: 0px;
 		}
